ProdIND/ProdPrograms/force-app/main/default/objects/OpportunityTeamMember/fields/Assign_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be used to display lookup to user</description>
    <label>Assign To</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select user to be assigned to this module.</errorMessage>
        <filterItems>
            <field>$User.Product_Type__c</field>
            <operation>equals</operation>
            <valueField>User.Product_Type__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Team</relationshipName>
    <type>Lookup</type>
</CustomField>