ProdIND/ProdPrograms/force-app/main/default/objects/OpportunityTeamMember/fields/Assigned_Module__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Module__c</fullName>
    <description>Module being assigned to user</description>
    <inlineHelpText>Module being assigned to user</inlineHelpText>
    <label>Assigned Module</label>
    <length>100</length>
    <type>Text</type>
</CustomField>