ProdIND/ProdPrograms/force-app/main/default/objects/OpportunityTeamMember/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be updated to True if user clicks on Submit against assigned Module.</description>
    <inlineHelpText>This will be updated to True if user clicks on Submit against assigned Module.</inlineHelpText>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>